test/tests/stages/8_loops/invalid_parse/decl_as_loop_body.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  while
  (
  const int(1)
  )
  int
  identifier(i)
  =
  const int(0)
  ;
  return
  const int(0)
  ;
  }
